--- a/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Common/Details.cshtml
@@ -13,7 +13,6 @@
     <section role="contentinfo">
 
         <div class="col-md-12 mrgn-tp-md mrgn-bttm-md pull-right">
-            <a title="@Localizer["print"]" target="_blank" href="@Url.Action("PositionDetails", "ToPdf", new { id = Model.Position.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName })"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="@Localizer["print"]"></span> </a>
             <a title="@Localizer["save"]" target="_blank" href="@Url.Action("PositionDetails", "ToPdf", new { id = Model.Position.JobTitleId, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName })"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["save"]"></span> </a>
         </div>
         <form asp-all-route-data="RouteParameter" method="post">
@@ -105,18 +104,18 @@
                 </tbody>
             </table>
         </form>
-        <div class="row">
-            <div class="col-lg-12 mrgn-tp-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear: both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         @{
                             var paramdata = new Dictionary<string, string>
-                                                                                   {
+                                                                                               {
                               {"positionid", Model.PositionId.ToString()}
                             };
                         }
-                        <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="@Model.PreviousPage" >@Localizer["Previous"]</a></li>
+                        <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="@Model.PreviousPage">@Localizer["Previous"]</a></li>
                     </ul>
                 </nav>
             </div>
@@ -144,14 +143,14 @@
             <a asp-page="../../../CCGMember/Similar/SimilarList" asp-all-route-data="@RouteParameter100" class="btn btn-primary mr-2">&nbsp;&nbsp;&nbsp;@Localizer["100%"]&nbsp;&nbsp;&nbsp;</a>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12 mrgn-tp-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear: both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         @{
                             var paramdata = new Dictionary<string, string>
-                            {
+                                        {
                               {"positionid", Model.PositionId.ToString()},
                               {"previouspage",Model.PreviousPage },
                               {"previouspagedetails", "../../Candidate/Seagoing/Common/Details" }
