--- a/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
+++ b/Web/Pages/Candidate/Seagoing/Crew/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @inject IViewLocalizer Localizer
 @{
+    ViewData["Title"] = Localizer["title"];
 }
     <section role="contentinfo">
         <div class="col-md-12">
@@ -11,23 +12,23 @@
                         <a class="nav-link" asp-page="Deck/PositionList">
                             <img src="~/img/CCGMember/SC.jpg" alt="@Localizer["PhotoDeck"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
-                        <figcaption><h4 class="text-center">@Localizer["Deck"]</h4></figcaption>
+                        <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Deck/PositionList">@Localizer["Deck"]</a></h4></figcaption>
                     </figure>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <figure>
-                        <a asp-page="Engineering/PositionList">
+                        <a class="nav-link" asp-page="Engineering/PositionList">
                             <img src="~/img/CCGMember/Oiler.jpg" alt="@Localizer["PhotoEngineer"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
-                        <figcaption><h4 class="text-center">@Localizer["Engineering"]</h4></figcaption>
+                        <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Engineering/PositionList">@Localizer["Engineering"]</a></h4></figcaption>
                     </figure>
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <figure>
-                        <a asp-page="Logistics/PositionList">
+                        <a class="nav-link" asp-page="Logistics/PositionList">
                             <img src="~/img/CCGMember/GS.jpg" alt="@Localizer["PhotoLogistics"]" class="img-thumbnail img-responsive mrgn-bttm-sm" />
                         </a>
-                        <figcaption><h4 class="text-center">@Localizer["Logistics"]</h4></figcaption>
+                        <figcaption><h4 class="text-center"><a style="text-decoration:none" asp-page="Logistics/PositionList">@Localizer["Logistics"]</a></h4></figcaption>
                     </figure>
                 </div>
             </div>
