--- a/Web/Pages/Candidate/Shoreside/Compare/AllObjective.cshtml
+++ b/Web/Pages/Candidate/Shoreside/Compare/AllObjective.cshtml
@@ -55,9 +55,9 @@
                 }
             </form>
         </div>
-        <div class="row">
-            <div class="col-lg-12 mrgn-bttm-md">
-                <nav role="navigation" class="mrgn-bttm-lg">
+        <div style="clear: both;">
+            <div class="col-lg-12">
+                <nav role="navigation">
                     <h2 class="wb-inv">Document navigation</h2>
                     <ul class="pager">
                         <li class="previous"><a asp-page="../SimilarDetails" asp-all-route-data="paramdata" class="btn btn-default" type="button" rel="prev">@Localizer["Previous"]</a></li>
