--- a/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
+++ b/Web/Pages/Candidate/Shoreside/SimilarList.cshtml
@@ -2,13 +2,13 @@
 @model Web.Pages.Candidate.Shoreside.SimilarListModel
 @inject IViewLocalizer Localizer
 @{
+    ViewData["Title"] = Localizer["title"];
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
     var countmessage = Model.Positions.Length != 1 ? "POSITIONS" : "POSITION";
 }
 
 <div class="col-md-12 mrgn-tp-md mrgn-bttm-md">
-    <a target="_blank" href="@Url.Action("SimilarListCandidate","ToPdf", new { id = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-print pull-right mrgn-lft-md" alt="Print document"></span> </a>
-    <a target="_blank" href="@Url.Action("SimilarListCandidate","ToPdf", new { id = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="Save document"></span> </a>
+    <a target="_blank" title="@Localizer["save"]" href="@Url.Action("SimilarListCandidate","ToPdf", new { id = Model.PositionIds, language = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName})"><span class="glyphicon glyphicon-save pull-right" alt="@Localizer["save"]"></span> </a>
 </div>
 <div class="mrgn-tp-lg">
     <h3 class="text-center">@(isEnglish ? Model.JobGroup.NameEng : Model.JobGroup.NameFre) (@Model.JobGroup.Code)</h3>
@@ -16,9 +16,9 @@
     <table class="table table-hover table-responsive table-bordered">
         <thead>
             <tr>
-                <th class="bg-primary" width="15%">@Localizer["LEVEL"]</th>
+                <th class="bg-primary" width="12%">@Localizer["LEVEL"]</th>
                 <th class="bg-primary" width="75%">@Localizer["POSITION"]</th>
-                <th class="bg-primary" width="10%"></th>
+                <th class="bg-primary" width="13%"></th>
             </tr>
         </thead>
         <tbody>
@@ -41,9 +41,9 @@
         </tbody>
     </table>
 </div>
-<div class="row">
-    <div class="col-lg-12 mrgn-tp-md">
-        <nav role="navigation" class="mrgn-bttm-lg">
+<div style="clear: both;">
+    <div class="col-lg-12">
+        <nav role="navigation">
             <h2 class="wb-inv">Document navigation</h2>
             <ul class="pager">
                 <li class="previous"><a class="btn btn-default" type="button" rel="prev" asp-page="AllCandidateShoreside">@Localizer["Previous"]</a></li>
