--- a/Admin/Pages/Positions/Details.cshtml
+++ b/Admin/Pages/Positions/Details.cshtml
@@ -19,9 +19,9 @@
             <tr>
                 <th colspan="2" style="background-color:#f2f2f2">CERTIFICATIONS / ATTESTATIONS</th>
             </tr>
-            @if (Model.PositionCertificates.Any())
+            @if (Model.PositionCertificates.Any(e => e.Active != 0))
             {
-                @foreach (var c in Model.PositionCertificates)
+                @foreach (var c in Model.PositionCertificates.Where(e => e.Active != 0))
                 {
                     var key = "c" + c.Id.ToString();
 
@@ -60,7 +60,7 @@
                     {
                         @foreach (var competencytype in Model.PositionCompetencyRatings)
                         {
-                            if (competencytype.Any())
+                            if (competencytype.Any(e => e.Active != 0))
                             {
 
 
@@ -68,7 +68,7 @@
                                     <th style="background-color:#f2f2f2">@competencytype.FirstOrDefault()?.TypeNameEng.ToUpper() / @competencytype.FirstOrDefault()?.TypeNameFre.ToUpper()</th>
                                     <th class="text-center" style="background-color:#f2f2f2">Level / Niveau</th>
                                 </tr>
-                                foreach (var c in competencytype)
+                                foreach (var c in competencytype.Where(e => e.Active != 0))
                                 {
                                     var key1 = "a" + c.CompetencyId.ToString();
                                     var key2 = "b" + c.CompetencyId.ToString();
