--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -43,7 +43,7 @@
         }
         <div class="clearfix"></div>
             <h2><b>@Localizer["Current Position Details"]</b></h2>
-
+            <h4>@Localizer["USERACTION"]</h4>
             <table class="table table-hover table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
                 <thead>
                     <tr>
